# openvino

./: .clang-format  .coveragerc  .devcontainer.json  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  0001-temp.patch  0001-update.patch  7559.diff  AGENTS.md  AI_USAGE_POLICY.md  ALL_BUILD.vcxproj  Android.mk  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODEOWNERS  CODE_OF_CONDUCT.md  COLAB_MIGRATION_GUIDE.md  CONTRIBUTING.md  CONTRIBUTING_DOCS.md  CONTRIBUTING_PR.md  CONTRIBUTING_ROADMAP.md  CPackConfig.cmake  CPackSourceConfig.cmake  CYBERSPORE_WIKI.md  CmakePresets.json  Cyberspore_Colab.ipynb  Cyberspore_VSCode_Local.ipynb  Dockerfile.riscv-openvino  EVOLUTION_V2_GUIDE.md  EXECUTION_REPORT.md  FindOpenCL.cmake  FindProtobuf.cmake  Findflatbuffers.cmake  GC_BUILD.MD  (+295 more)
docs/: 001-hello-world-with-output.rst  CMakeLists.txt  Doxyfile.config  GOVERNANCE.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  Legal_Information.md  Legal_Information.rst  Optimization_notice.md  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RELEASE.MD  RELEASE_NOTES_EDITORIAL_RULES.md  cmake_install.cmake  conf.py  conf_zh_CN.py  disable_layer_fusion_doc.md  dlstreamer.md  dlstreamer.rst  documentation.md  documentation.rst  documentation_build_instructions.md  documentation_guidelines.md  doxygen-xfail.txt  doxyrest-config.lua  ecosystem.md  get_started.md  get_started.rst  get_started_bak.md  glossary.md  glossary.rst  hetero-plugin.md  home.rst  home_zh_CN.rst  importing_models.md  index.html  index.md  index.rst  index_zh_CN.rst  learn_openvino.md  (+14 more)
docs/Documentation/: datumaro.md  deployment_guide_introduction.md  dl_workbench_overview.md  inference_modes_overview.md  media_processing_cv_libraries.md  model_introduction.md  openvino_ecosystem.md  openvino_ecosystem_ovtf.md  openvino_legacy_features.md  openvino_training_extensions.md  openvino_workflow.md  torch_compile.md
docs/Extensibility_UG/: AddingNGraphOps.md  Building.md  CPU_Kernel.md  Custom_Layers_Guide.md  Custom_ONNX_Ops.md  Extension.md  GPU_Extensibility.md  GPU_Extensibility.rst  GPU_Kernel.md  Intro.md  Intro.rst  VPU_Extensibility.md  VPU_Kernel.md  add_openvino_ops.md  add_openvino_ops.rst  frontend_extensions.md  frontend_extensions.rst  graph_rewrite_pass.md  graph_rewrite_pass.rst  matcher_pass.md  matcher_pass.rst  model_pass.md  model_pass.rst  ov_transformations.md  ov_transformations.rst
docs/HOWTO/: Custom_Layers_Guide.md  add_regression_test_vpu.md  fuzzing-HOWTO.md  how_to_build_library_to_encapsulate_openvino.md  mri_reconstruction_demo.py
docs/IE_DG/: API_Changes.md  Bfloat16Inference.md  Cross_Check_Tool.md  Deep_Learning_Inference_Engine_DevGuide.md  DynamicBatching.md  GPU_Kernels_Tuning.md  Glossary.md  Graph_debug_capabilities.md  InferenceEngine_QueryAPI.md  Int8Inference.md  Integrate_with_customer_application_new_API.md  Intro_to_Performance.md  Introduction.md  Known_Issues_Limitations.md  Legal_Information.md  Memory_primitives.md  Migration_CoreAPI.md  Model_Downloader.md  Model_caching_overview.md  ONNX_Support.md  ONNX_Supported_Ops.md  OnnxImporterTutorial.md  Operations_specifications.md  Optimization_notice.md  Paddle_Support.md  PythonPackage_Overview.md  Samples_Overview.md  ShapeInference.md  Tools_Overview.md  inference_engine_intro.md  integrate_with_customer_application_python.md  nGraphTutorial.md  nGraph_Flow.md  network_state_intro.md  protecting_model_guide.md
docs/IE_PLUGIN_DG/: AsyncInferRequest.md  AsyncInferRequest.rst  Building.md  Building.rst  CompiledModel.md  CompiledModel.rst  Doxyfile  ExecutableNetwork.md  (+24 more)
inference-engine/: .clang-format  CMakeLists.txt  README.md  install_dependencies.sh  install_dependencies_1804.sh
licensing/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  dev-third-party-programs.txt  documentation-third-party-programs.txt  onednn_third-party-programs.txt  runtime-third-party-programs.txt  tbb_third-party-programs.txt  third-party-programs.txt
model-optimizer/: .coveragerc  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  MANIFEST.in  ModelOptimizer  README.md  mo.py  mo_caffe.py  mo_kaldi.py  mo_mxnet.py  mo_onnx.py  mo_paddle.py  mo_pdpd.py  mo_pytorch.py  mo_tf.py  requirements.txt  requirements_caffe.txt  requirements_dev.txt  requirements_kaldi.txt  requirements_mxnet.txt  requirements_onnx.txt  requirements_tf.txt  requirements_tf2.txt  setup.py  testfile  version.txt
ngraph/: .clang-format  .gitignore  .travis.yml  ABOUT.md  CMakeLists.txt  CONTRIB.md  README.md  VERSION.in  changes.md  ecosystem-overview.md  environment_variables.md
openvino/: CMakeLists.txt
runtime/: CMakeLists.txt
samples/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
scripts/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  bevpool_performance_and_parity_report.py  build_mlir.sh  build_tpp_mlir.sh  centos7_install_guide.sh  check_master_ci.sh  cmake_install.cmake  run_pts_openvino_int8_models.sh  submodule_update_with_gitee.sh  summarize_benchmark_conv.py
src/: .clang-format  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  cmake_install.cmake  openvino.vcxproj  openvino.vcxproj.filters  vs_version.rc
tests/: .gitignore  CMakeLists.txt  OpenVINO Benchmark Analysis.ipynb  README.md  TEST-tfl_fe.xml  constraints.txt  requirements_jax  requirements_onnx  requirements_pytorch  requirements_pytorch.txt  requirements_rope  requirements_tensorflow  requirements_tensorflow.txt  test_disable_fusion.py  test_moe_unroll.cpp
tools/: .gitignore  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  __init__.py  cmake_install.cmake  constraints.txt  network.py  polar_codebook_gen.py  python_api_reproducer.py  requirements_dev.in  setup.py  sha256hash.py  verify_cpu_func_test_sources.py
(+66215 files in other folders)
